[tool.poetry]
name = "geoserverx"
version = "0.1.0"
description = ""
authors = ["krishnaglodha <krishnaglodha@gmail.com>"]

[tool.poetry.scripts]
gsx = "geoserverx.cli.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"
pydantic = "^1.9.1"
typer = "^0.4.1"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
respx = "^0.19.0"
pytest-httpx = "^0.21.3"
mypy = "^0.960"
black = "^22.3.0"
isort = "^5.10.1"
anyio = {extras = ["trio"], version = "^3.3.4"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
