[tool.poetry]
name = "geoserverx"
version = "0.0.2"
description = ""
authors = ["krishnaglodha <krishnaglodha@gmail.com>"]

[tool.poetry.scripts]
gsx = "geoserverx.cli.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.24.1"
pydantic = "^1.9.1"
typer = "^0.4.1"
rich = "^12.5.1"
mkdocs-material = "^9.0.14"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
respx = "^0.20.1"
mypy = "^0.960"
black = "^22.3.0"
isort = "^5.10.1"
pytest-asyncio = "^0.21.0"
anyio = {extras = ["trio"], version = "^3.3.4"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
